log
Fri 19 Aug 2022 12:37:08 PM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
fab9344
Fri 19 Aug 2022 12:40:46 PM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:37:3: error: ‘x’ undeclared (first use in this function)
   37 |   x = list.head;
      |   ^
list.c:37:3: note: each undeclared identifier is reported only once for each function it appears in
list.c:37:11: error: ‘list’ is a pointer; did you mean to use ‘->’?
   37 |   x = list.head;
      |           ^
      |           ->
list.c:39:1: error: control reaches end of non-void function [-Werror=return-type]
   39 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
c6843a3
Fri 19 Aug 2022 12:40:55 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:37:3: error: ‘x’ undeclared (first use in this function)
   37 |   x = list->head;
      |   ^
list.c:37:3: note: each undeclared identifier is reported only once for each function it appears in
list.c:39:1: error: control reaches end of non-void function [-Werror=return-type]
   39 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
81a8a9f
Fri 19 Aug 2022 12:41:17 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:37:3: error: unknown type name ‘x’
   37 |   x* = list->head;
      |   ^
list.c:37:6: error: expected identifier or ‘(’ before ‘=’ token
   37 |   x* = list->head;
      |      ^
list.c:38:10: error: ‘x’ undeclared (first use in this function)
   38 |   return x;
      |          ^
list.c:38:10: note: each undeclared identifier is reported only once for each function it appears in
list.c:39:1: error: control reaches end of non-void function [-Werror=return-type]
   39 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
51608d2
Fri 19 Aug 2022 12:41:29 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:37:4: error: ‘x’ undeclared (first use in this function)
   37 |   *x = list->head;
      |    ^
list.c:37:4: note: each undeclared identifier is reported only once for each function it appears in
list.c:39:1: error: control reaches end of non-void function [-Werror=return-type]
   39 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
9268de0
Fri 19 Aug 2022 12:43:23 PM UTC: 
 list.c | 1 -
 1 file changed, 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:37:4: error: ‘x’ undeclared (first use in this function)
   37 |   *x = list->head;
      |    ^
list.c:37:4: note: each undeclared identifier is reported only once for each function it appears in
list.c:38:1: error: control reaches end of non-void function [-Werror=return-type]
   38 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
776df1e
Fri 19 Aug 2022 12:48:42 PM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:37:7: error: ‘list’ is a pointer; did you mean to use ‘->’?
   37 |   list.current -> list.head;
      |       ^
      |       ->
list.c:38:14: error: ‘list’ is a pointer; did you mean to use ‘->’?
   38 |   return list.head;
      |              ^
      |              ->
list.c:39:1: error: control reaches end of non-void function [-Werror=return-type]
   39 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
c4ed15c
Fri 19 Aug 2022 12:49:19 PM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
68873d5
Fri 19 Aug 2022 12:50:07 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
6d56ffc
Fri 19 Aug 2022 12:54:14 PM UTC: 
 list.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  0|0
b41fd86
Fri 19 Aug 2022 12:55:08 PM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
0277800
